<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    android:style =

    <TextView
        android:id="@+id/operaciones"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginBottom="30dp"
        android:gravity="right"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/resultParcial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/resultParcial"
        android:layout_width="320dp"
        android:layout_height="35dp"
        android:layout_marginBottom="40dp"
        android:gravity="right"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultParcial">

        <Button
            android:id="@+id/buttonClearParc"
            style="@style/ButtonOp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/BorrarParcial" />

        <Button
            android:id="@+id/buttonClear"
            style="@style/ButtonOp"
            android:layout_width="111dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/borrar" />

        <Button
            android:id="@+id/buttonDiv"
            style="@style/ButtonOp"
            android:layout_width="111dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/division" />

        <Button
            android:id="@+id/buttonMult"
            style="@style/ButtonOp"
            android:layout_width="111dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/multiplicacion" />

        <Button
            android:id="@+id/buttonRest"
            style="@style/ButtonOp"
            android:layout_width="111dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/resta" />

        <Button
            android:id="@+id/buttonSum"
            style="@style/ButtonOp"
            android:layout_width="111dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/suma" />

        <Button
            android:id="@+id/buttonPlusMin"
            style="@style/ButtonOp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/ManMenos" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="217dp">

            <Button
                android:id="@+id/button7"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:text="@string/siete" />

            <Button
                android:id="@+id/button8"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:text="@string/ocho" />

            <Button
                android:id="@+id/button9"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:text="@string/nueve" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:text="@string/cuatro" />

            <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:text="@string/cinco" />

            <Button
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:text="@string/seis" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:text="@string/uno" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:text="@string/dos" />

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:text="@string/tres" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonDot"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:text="@string/punto" />

            <Button
                android:id="@+id/button0"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:text="@string/cero" />

            <Button
                android:id="@+id/buttonEq"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:text="@string/igual" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>